Add html entities

--- a/recipes/fried-rice.html
+++ b/recipes/fried-rice.html
@@ -8,7 +8,7 @@
     <h1>Fried Rice</h1>
     <img src="../images/fried-rice.jpg" alt="Fried rice in a pan with a wooden spoon">
     <h3>Fried rice is a quick and delicious way to transform leftovers into something greater than the sum of its parts.</h3>
-    <p>Fried rice has been a kitchen staple since as early as the Sui Dynasty (589–618 CE) in China. The primary reason for the continued popularity and ubiquity of this dish comes down to two things: its adaptability and the fact that people almost always cook too much rice to eat in one sitting.</p>
+    <p>Fried rice has been a kitchen staple since as early as the Sui Dynasty (589&#8211;618 CE) in China. The primary reason for the continued popularity and ubiquity of this dish comes down to two things: its adaptability and the fact that people almost always cook too much rice to eat in one sitting.</p>
     <h3>Ingredients</h3>
     <ul>
         <li>3 tbsp sesame oil, divided</li>
