--- a/recipes/lumpia.html
+++ b/recipes/lumpia.html
@@ -8,7 +8,7 @@
     <h1>Lumpia</h1>
     <img src="../images/lumpia.jpg" alt="Lumpia stacked in rows">
     <h3>This is a traditional Filipino dish. It is the Filipino version of the egg rolls. It can be served as a side dish or as an appetizer.</h3>
-    <p>Filipino lumpia is a fan favorite among many. It's crispy, full of flavor, and a perfect finger food for any occasion.</p>
+    <p>Filipino lumpia is a fan favorite among many. It&#8218;s crispy, full of flavor, and a perfect finger food for any occasion.</p>
     <h3>Ingredients</h3>
     <ul>
         <li>1 tbsp vegetable oil</li>
