--- a/recipes/tres-leches.html
+++ b/recipes/tres-leches.html
@@ -8,8 +8,8 @@
     <h1>Tres Leches Cake</h1>
     <img src="../images/tres-leches-cake.jpg" alt="Tres Leches cake topped with a strawberry">
     <h3>The BEST authentic homemade Tres Leches Cake. An ultra light cake soaked in a sweet milk mixture and topped with fresh whipped cream and cinnamon. This simple Mexican dessert is one of our favorites! </h3>
-    <p>Tres leches literally means, “three milks”  and Tres Leches Cake is an ultra light sponge cake soaked in a sweet milk mixture.  It’s popular in Mexico and Latin America and throughout the United States as it’s often available at Mexican restaurants.</p>
-    <p>The cake is similar to an angel food cake. The whipped egg whites in the batter make it extra light and spongy. After baking the cake you poke holes in it with a fork and pour three types of milk over the top–evaporated milk, sweetened condensed milk, and whole milk–hence the name “tres leches”.</p>
+    <p>Tres leches literally means, “three milks”  and Tres Leches Cake is an ultra light sponge cake soaked in a sweet milk mixture.  It&#8218;s popular in Mexico and Latin America and throughout the United States as it&#8218;s often available at Mexican restaurants.</p>
+    <p>The cake is similar to an angel food cake. The whipped egg whites in the batter make it extra light and spongy. After baking the cake you poke holes in it with a fork and pour three types of milk over the top-evaporated milk, sweetened condensed milk, and whole milk-hence the name “tres leches”.</p>
     <h3>Ingredients</h3>
     <h5>Cake</h5>
     <ul>
